<resources>
    <string name="app_name">Helbby</string>
    <string name="facebook_app_id">1734477296858700</string>
    <string name="registrarse">Registrate con tu email</string>
    <string name="registrado_con_email">¿Estás registrado con tu email?</string>
    <string name="ingresa_email">Ingresa con tu e-mail</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="registrate">Registrarse</string>
    <string name="emailRegis">Email</string>
    <string name="passRegis">Contraseña</string>
    <string name="nombreRegis">Nombre</string>
    <string name="escriba_nombre">¡Digite nombre!</string>
    <string name="escriba_email">¡Digite correctamente su email!</string>
    <string name="escriba_contra">¡Digite correctamente su contraseña!</string>
    <string name="contra_corta">¡Contraseña demasiado corta, digite un mínimo de 8 caracteres!</string>
    <string name="auth_failed">Error en la autenticación, comprueba tu correo electrónico y contraseña o regístrate</string>
</resources>
